New folder dialog suggests name of existing, selected folder.
Steps to Reproduce
- Without selecting any file or folder, press
Ctrl
+Shift
+N
(or click on the new folder button from the menu). - Enter "foobar" as the name for the new folder, then press
Enter
. - Press
Ctrl
+Shift
+N
again to create another folder (or click on the new folder button from the menu).
Expected Result
No name is suggested for the new folder.
Actual Result
The new folder dialog suggests "foobar" as the name for the second new folder, but warns that there is already a folder with that name.
This is annoying when creating 2 or more folders in a row.