new-folder-dialog-controller: Remove the new folder name suggestion

After we create a new folder, when we proceed to create another one,
the name of the previous folder is used as suggestion, although there
already exists a file with that particular name.

In this patch, we solve this problem by removing the initial text
added in the new folder name box.

https://gitlab.gnome.org/GNOME/nautilus/issues/206